--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "lru-cache": "5.1.1",
+    "lru-cache": "^10.0.2",
     "mysql2": "^3.6.3",
     "node-cache": "^5.1.2"
   }
